Skatepark: Fix title spacing (#4624)
* Skatepark: replace image padding with spacer

* Skatepark: adjust featured image spacing

* Skatepark: tweak single spacer height

* Skatepark: apply spacing changes to page template

* Moved spacing from a spacer to margin-top

--- a/skatepark/assets/theme.css
+++ b/skatepark/assets/theme.css
@@ -177,10 +177,19 @@
 	text-decoration: none;
 }
 
+.wp-block-post-featured-image {
+	margin-bottom: 0;
+}
+
 h1.wp-block-post-title:not(.has-featured-image .wp-block-post-title) {
 	border-bottom: var(--wp--custom--form--border--width) var(--wp--custom--form--border--style) var(--wp--preset--color--primary);
-	padding-bottom: calc( var(--wp--custom--gap--vertical) * 2);
+	padding-bottom: calc(var(--wp--custom--gap--vertical) * 3);
 	margin-bottom: 0;
+}
+
+.is-root-container,
+.wp-block-post-content {
+	margin-top: calc(var(--wp--custom--gap--vertical) * 3);
 }
 
 .wp-block-query-pagination .wp-block-query-pagination-numbers .current {
